# geo212_ufba2024_2

./: LICENSE  README.md  __init__.py  geo212_ufba2024_2-0.1.0-py3-none-any.whl  pyproject.toml  setup.py  test_functions.py
